packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unknown_call_args_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      29
    ],
    "items": 4,
    "width": 128.0,
    "height": 17.93,
    "x": -64.65,
    "y": 40.32
  },
  {
    "range": [
      31,
      37
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 77.45
  }
]
