packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unknown_ident_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      27
    ],
    "items": 6,
    "width": 116.38,
    "height": 16.38,
    "x": -58.66,
    "y": 40.32
  },
  {
    "range": [
      29,
      35
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 75.9
  }
]
